# cliper

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/clipboard/: dedup.rs  listener.rs  mod.rs  reader.rs  writer.rs
src-tauri/src/commands/: devtools.rs  folders.rs  history.rs  mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  queries.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/settings/: manager.rs
src-tauri/src/tray/: handler.rs
src-tauri/src/utils/: focus.rs  logger.rs  mod.rs
src/lib/: types.ts  utils.ts
src/lib/components/: DetailView.svelte  FolderAssignPopover.svelte  FolderBar.svelte  HistoryItem.svelte  HistoryList.svelte  SearchBar.svelte
src/lib/stores/: folders.ts  history.ts  ui.ts
